# tomlify

./: README.md  pyproject.toml  tomlify.py
template/: pyproject.toml
